--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -12,8 +12,8 @@
   <div class="row">
     <div class="col-lg-12">
       <h1 class="page-header">Features:</h1>
-      <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="thing in awesomeThings">
-        <li><a href="#" tooltip="{{thing.info}}">{{thing.name}}<button type="button" class="close" ng-click="deleteThing(thing)">&times;</button></a></li>
+      <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="product in Products">
+        <li><a href="#" tooltip="{{product.description}}">{{product.name}}<button type="button" class="close" ng-click="removeProduct(product)">&times;</button></a></li>
       </ul>
     </div>
   </div>
