--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,10 +1,19 @@
-<header class="hero-unit" id="banner">
-  <div class="container">
-    <h1>'Allo, 'Allo!</h1>
-    <p class="lead">Kick-start your next web app with Angular Fullstack</p>
-    <img src="assets/images/yeoman.png" alt="I'm Yeoman">
+<div class="container">
+  <div ng-app="app" id="carCont">
+    <div ng-controller="CarouselCtrl" id="carousel">
+        <carousel interval="myInterval">
+          <slide ng-repeat="slide in slides" active="slide.active">
+            <img ng-src="{{slide.image}}">
+            <div class="carousel-caption">
+              <h1>Belief in Motion</h1>
+              <p>{{slide.text}}</p>
+            </div>
+          </slide>
+        </carousel>
+    </div>
   </div>
-</header>
+</div>
+<br><br><br>
 
 <div class="container">
   <div class="row">
@@ -29,8 +38,8 @@
 
 <footer class="footer">
   <div class="container">
-      <p>Angular Fullstack v2.1.1 |
-        <a href="https://twitter.com/tyhenkel">@tyhenkel</a> |
-         <a href="https://github.com/DaftMonk/generator-angular-fullstack/issues?state=open">Issues</a></p>
+      <p>Website by Britney Dossett |
+        <a href="https://twitter.com/britneydossett">@britneydossett</a> |
+         <a href="https://github.com/britneydossett">Github</a></p>
   </div>
 </footer>
