--- a/client/app/products/productDetail/productDetail.html
+++ b/client/app/products/productDetail/productDetail.html
@@ -1,4 +1,4 @@
-<section class="container-fluid item">
+<section class="container-fluid product">
   <div class="row">
     <h2 class="text-center">{{ ctrl.product.name }}</h2>
     <div class="col-md-4 col-md-offset-2">
@@ -18,7 +18,7 @@
       </div>
     </div>
 
-    <div class="col-md-4 item-image">
+    <div class="col-md-4 product-image">
       <img class="middle" width=200px ng-src="/assets/images/{{ctrl.product.imageFile}}"/>
     </div>
   </div>
