--- a/client/index.html
+++ b/client/index.html
@@ -68,6 +68,7 @@
         <script src="app/app.js"></script>
           <!-- injector:js -->
           <script src="app/about/about.controller.js"></script>
+          <script src="app/about/carousel.controller.js"></script>
           <script src="app/account/account.js"></script>
           <script src="app/account/login/login.controller.js"></script>
           <script src="app/account/settings/settings.controller.js"></script>
@@ -75,7 +76,6 @@
           <script src="app/admin/admin.controller.js"></script>
           <script src="app/admin/admin.js"></script>
           <script src="app/cartService/cartService.service.js"></script>
-          <script src="app/main/carousel.controller.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
           <script src="app/products/productDetail/productDetail.controller.js"></script>
