Added malarkey and other css

--- a/client/app/about/about.html
+++ b/client/app/about/about.html
@@ -1,5 +1,5 @@
-<div>
-  <h1 class="header2">Belief in Motion</h1>
+<div class="header2">
+  <h1>Belief in Motion</h1>
 </div>
 
 <div class="container">
@@ -26,7 +26,7 @@
       </ul>
     </div>
   </div>
-  <div>
+  <div class="textbox">
     <p> Belief in Motion was established in 2007 and mission is to see the lives of impoverished people changed. We believe that education is key to stopping the cycle of poverty and abandoment in Romania. We want children to grow up in an educated environment, where they have the opportunity to get jobs instead of turning to prostitution, stealing, or begging. We also want to empower women by giving them usefufl skills and jobs so they can provide for their family.
     </p>
     <br>
