--- a/client/index.html
+++ b/client/index.html
@@ -14,6 +14,7 @@
     <!-- build:css(client) app/vendor.css -->
       <!-- bower:css -->
       <link rel="stylesheet" href="bower_components/animate-css/animate.css" />
+      <link href='https://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
       <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,client}) app/app.css -->
@@ -60,6 +61,7 @@
       <script src="bower_components/angular-animate/angular-animate.js"></script>
       <!-- endbower -->
       <script src="socket.io-client/socket.io.js"></script>
+      <script src="assets/javascript/malarkey.min.js"></script>
     <!-- endbuild -->
 
 
@@ -78,6 +80,7 @@
           <script src="app/cartService/cartService.service.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
+          <script src="app/main/scroller.controller.js"></script>
           <script src="app/products/productDetail/productDetail.controller.js"></script>
           <script src="app/products/productDetail/productDetail.js"></script>
           <script src="app/products/productFilter/productFilter.filter.js"></script>
