--- a/client/app/about/about.html
+++ b/client/app/about/about.html
@@ -20,7 +20,7 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-12">
-      <h1 class="page-header">Features:</h1>
+      <h1 class="page-header">About:</h1>
       <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="product in Products">
         <li><a href="#" tooltip="{{product.description}}">{{product.name}}<button type="button" class="close" ng-click="removeProduct(product)">&times;</button></a></li>
       </ul>
