--- a/client/app/products/productDetail/productDetail.html
+++ b/client/app/products/productDetail/productDetail.html
@@ -13,13 +13,21 @@
 
       <div class="back">
         <button type="button"
-                class="btn btn-primary"
+                class="btn btn-success"
                 onclick="window.history.back()">Back</button>
       </div>
     </div>
 
     <div class="col-md-4 product-image">
-      <img class="middle" width=200px ng-src="/assets/images/{{ctrl.product.imageFile}}"/>
+      <img class="middle" width=200px ng-src="/assets/images/inventory/{{ctrl.product.imageFile}}"/>
     </div>
   </div>
 </section>
+
+<footer class="footer">
+  <div class="container">
+      <p>Website by Britney Dossett |
+        <a href="https://twitter.com/britneydossett">@britneydossett</a> |
+         <a href="https://github.com/britneydossett">Github</a></p>
+  </div>
+</footer>
