--- a/client/app/products/products.html
+++ b/client/app/products/products.html
@@ -1,14 +1,9 @@
 <section class="container search">
-  <form class="navbar-form" role="search">
-    <div class="form-group">
-      <input type="text" class="form-control" name="search" ng-model="products.searchText" placeholder="Search">
-    </div>
-    <button type="clear" class="btn btn-warning"
-            ng-click="products.searchText = ''">Reset</button>
-  </form>
+  <h1>Current Needs:</h1>
 </section>
 <section class="container items">
   <div class="list-group">
+    <article class="items col-sm-9">
         <div class="row">
           <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 animate-inventory"
                ng-repeat="product in products.inventory">
@@ -28,7 +23,7 @@
               </article>
             </a>
             <div class="text-center">
-              <button class="btn btn-sm btn-success" ng-click="products.addProduct(product)">Add to Cart</button>
+              <button class="btn btn-sm btn-danger" ng-click="products.addProduct(product)">Add to Cart</button>
             </div>
           </div>
           <div class="animate-inventory text-center" ng-hide="products.inventory.length">
@@ -36,17 +31,28 @@
           </div>
         </div>
       </div>
+    </article>
+
+  <article class="col-sm-3">
+    <section ng-show="products.isLoggedIn()" class="cart text-center">
+      <h2>Your Cart:</h2>
+      <ul>
+        <li class="cart animate-cart" ng-repeat="cartItem in products.cart">   <!--track by cartItem._id-->
+          <span>{{ cartItem.qty + ' x ' + cartItem.item.name + ' = ' + (products.getCost(cartItem) | currency) }}</span>
+          <button class="btn btn-danger btn-xs" ng-click="products.removeProduct(cartItem)">Remove Item</button>
+        </li>
+      </ul>
+      <h3>Total: {{ products.total | currency }}</h3>
+      <br>
+      <button class="btn btn-danger" ng-click="products.clearCart()">Clear Cart</button>
+    </section>
+  </article>
 </section>
 
-<section ng-show="products.isLoggedIn()" class="cart text-center">
-  <h2>Your Cart:</h2>
-  <ul>
-    <li class="cart animate-cart" ng-repeat="cartItem in products.cart track by cartItem._id">
-      <span>{{ cartItem.qty + ' x ' + cartItem.item.name + ' = ' + (products.getCost(cartItem) | currency) }}</span>
-      <button class="btn btn-danger btn-xs" ng-click="products.removeProduct(cartItem)">Remove Item</button>
-    </li>
-  </ul>
-  <h3>Total: {{ products.total | currency }}</h3>
-  <br>
-  <button class="btn btn-danger" ng-click="products.clearCart()">Clear Cart</button>
-</section>
+<footer class="footer">
+  <div class="container">
+      <p>Website by Britney Dossett |
+        <a href="https://twitter.com/britneydossett">@britneydossett</a> |
+         <a href="https://github.com/britneydossett">Github</a></p>
+  </div>
+</footer>
