--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -15,7 +15,7 @@
 </div>
 
 <div class="container" id="video">
-    <iframe src="https://player.vimeo.com/video/143556458" width="870" height="579" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="https://vimeo.com/143556458">What if? - Piranda Premiere Events!</a> from <a href="https://vimeo.com/beliefinmotion">Belief in Motion</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+    <iframe src="https://player.vimeo.com/video/143556458" width="870" height="579" frameborder="0" align="middle" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="https://vimeo.com/143556458">What if? - Piranda Premiere Events!</a> from <a href="https://vimeo.com/beliefinmotion">Belief in Motion</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 </div>
 
 <footer class="footer">
