--- a/client/app/about/about.html
+++ b/client/app/about/about.html
@@ -5,7 +5,7 @@
 <div class="container">
   <div ng-app="app" id="carCont">
     <div ng-controller="CarouselCtrl" id="carousel">
-        <carousel interval="myInterval" disable-ng-animate>
+        <carousel interval="myInterval">
           <slide ng-repeat="slide in slides" active="slide.active">
             <img ng-src="{{slide.image}}">
           </slide>
